# zo

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/codegen/: codegen.h  go_codegen.cpp  go_codegen.h
src/common/: diagnostics.cpp  diagnostics.h  source_location.h
src/driver/: compiler.cpp  compiler.h  project.cpp  project.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.h  parser.cpp  parser.h
src/pkg/: build_config.cpp  build_config.h  git_ops.cpp  git_ops.h  lock_file.cpp  lock_file.h  resolver.cpp  resolver.h  semver.cpp  semver.h
src/sema/: symbol_table.cpp  symbol_table.h  type_checker.cpp  type_checker.h
